tests/snapshots/cli_tests__snapshot_helpers__add_command_help.snap
---
source: tests/snapshot_helpers.rs
expression: normalized
---
Add a new skill to the skills database

Usage: fastskill add [OPTIONS] <SOURCE>

Arguments:
  <SOURCE>  Source: path to zip file, folder, git URL, or skill ID (e.g., pptx@[VERSION])

Options:
      --source-type <SOURCE_TYPE>  Override source type (registry, github, local) Default is registry for skill IDs
      --branch <BRANCH>            Git branch to checkout (only for git URLs)
      --tag <TAG>                  Git tag to checkout (only for git URLs)
  -f, --force                      Force registration even if skill already exists
  -e, --editable                   Install skill in editable mode (for local development, like poetry add -e)
      --group <GROUP>              Add skill to a specific group (like poetry add --group dev)
  -h, --help                       Print help
