tests/snapshots/cli_tests__snapshot_helpers__help_short_flag.snap
---
source: tests/snapshot_helpers.rs
expression: normalized
---
FastSkill CLI - Manage skills and run operations

Usage: fastskill [OPTIONS] [QUERY] [COMMAND]

Commands:
  add       Add a new skill to the skills database
  auth      Manage authentication for registries
  disable   Disable skills by ID
  init      Initialize skill-project.toml in current skill directory
  install   Install skills from skills.toml to registry
  list      List locally installed skills (similar to pip list)
  reindex   Reindex the vector index for semantic search
  remove    Remove skills from the skills database
  package   Package skills into ZIP artifacts with versioning
  publish   Publish artifacts to S3 blob storage
  read      Read skill documentation and output to stdout
  registry  Manage repositories and browse skills
  search    Search for skills by query
  serve     Start the FastSkill HTTP API server
  show      Show skill information and dependencies
  update    Update skills to latest versions
  version   Display FastSkill version
  help      Print this message or the help of the given subcommand(s)

Arguments:
  [QUERY]  Search query string (used when no subcommand is specified)

Options:
      --repositories-path <REPOSITORIES_PATH>  Path to .claude/repositories.toml file
  -v, --verbose                                Enable verbose output
  -h, --help                                   Print help (see more with '--help')
  -V, --version                                Print version
