tests/snapshots/cli_tests__snapshot_helpers__init_with_metadata.snap
---
source: tests/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
FastSkill Skill Initialization

[OK] Created skill-project.toml with version: [VERSION]

[INFO] This file contains author-provided metadata for your skill.
   It will be used by fastskill for version management.
